--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -519,7 +519,7 @@ section.contact {
 /* --- Single book page --- */
 section.single-book {
     text-align: left;
-    a {
+    a, p {
         color: @theme-tertiary;
     }
     img.book-image{
@@ -533,6 +533,10 @@ section.single-book {
         }
         li {
             margin-bottom: 5px;
+        }
+        p{
+            display: inline;
+            font-size: 20px;
         }
     }
     .description{
