--- a/static/less/mixins.less
+++ b/static/less/mixins.less
@@ -82,6 +82,7 @@
 	.backgroud-gradient;
 	font-weight: bold;
 	font-family: 'Francois One', 'Open Sans', 'Arial', 'sans-serif';
+    font-size: 1.2em;
 	&::selection {
 		background-color: @gray-lighter;
 	}
