--- a/static/less/mixins.less
+++ b/static/less/mixins.less
@@ -79,10 +79,12 @@
 }
 
 .delighted {
-	.backgroud-gradient;
-	font-weight: bold;
-	font-family: 'Francois One', 'Open Sans', 'Arial', 'sans-serif';
+    .backgroud-gradient;
+    font-weight: bold;
+    font-family: 'Francois One', 'Open Sans', 'Arial', 'sans-serif';
     font-size: 1.2em;
+    display: inline-block;
+    vertical-align: middle;
 	&::selection {
 		background-color: @gray-lighter;
 	}
