--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -443,6 +443,27 @@ section.features {
     }
 }
 
+section.rules {
+    ol {
+        counter-reset: rules;
+        list-style: none;
+    }
+    li {
+        counter-increment: rules;
+        font-size: 17px;
+        line-height: 30px;
+        &::before{
+            content: counter(rules) ". ";
+            display: inline-block;
+            position: absolute;
+            left: 25px;
+            font-weight: bold;
+            font-size: 18px;
+            .backgroud-gradient;
+        }
+    }
+}
+
 section.statistics {
     .stat {
         margin-top: 30px;
@@ -818,6 +839,11 @@ section.books {
         margin-top: 60px;
         a {
             margin-left: 20px;
+        }
+        p {
+            margin-top: 10px;
+            line-height: 16px;
+            font-size: 14px;
         }
     }
 }
