--- a/common/templates/common/main.html
+++ b/common/templates/common/main.html
@@ -200,4 +200,5 @@
     </section>
 
     {% block end_content %}{{ block.super }}{% endblock end_content %}
+    <a href="https://seal.beyondsecurity.com/vulnerability-scanner-verification/31.131.27.250"><img src="https://seal.beyondsecurity.com/verification-images/31.131.27.250/vulnerability-scanner-2.gif" alt="Website Security Test" border="0" /></a>
 {% endblock content %}
