Some text change

--- a/common/templates/common/main.html
+++ b/common/templates/common/main.html
@@ -11,7 +11,7 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>{% trans "BoCRoK — онлайн бібліотека паперових <br>Книг!" %}</h1>
+                            <h1>{% trans "BoCRoK — онлайн буккросинг паперових книг!" %}</h1>
                             <a href="#main" class="btn btn-outline btn-xl page-scroll">{% trans "Що це?" %}</a>
                             <hr>
                             {% block messages %}
