--- a/common/templates/common/before-start/main.html
+++ b/common/templates/common/before-start/main.html
@@ -56,7 +56,7 @@
         </section>
 
         <section id="remains-counter" class="section center">
-            <span>23</span>
+            <span>{{ books_to_start }}</span>
             <p>{% trans "залишилось книг до старту проекту..." %}</p>
             <div class="button-wrapper">
                 <a href="#book" class="button-green">{% trans "Додати книгу" %}</a>
