--- a/common/templates/common/before-start/main.html
+++ b/common/templates/common/before-start/main.html
@@ -96,21 +96,23 @@
                 <h3>{% trans "А розказати друзям?" %}</h3>
                 <div class="social-icons">
                     <ul>
-                        <li>
-                            <a href="fb.com">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="instagram.com">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="twitter.com">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
+                        {% with 'Обміняємось%20книгами?' as share_text %}
+                            <li>
+                                <a href="https://www.facebook.com/share.php?u={{ request.build_absolute_uri }}" target="_blank">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://pinterest.com/pin/create/button/?url={{ request.build_absolute_uri }}&description={{ share_text }}&media=" target="_blank">
+                                    <i class="fab fa-pinterest-p"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/intent/tweet?text={{ share_text }}&url={{ request.build_absolute_uri }}" target="_blank">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </li>
+                        {% endwith %}
                     </ul>
                 </div>
             </div>
