--- a/common/templates/common/before-start/main.html
+++ b/common/templates/common/before-start/main.html
@@ -6,6 +6,16 @@
 <head>
     <title>{% trans "Bookgo.me - обмінюємось книгами онлайн" %}</title>
     <meta name="viewport" content="width=device-width" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116201182-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-116201182-1');
+    </script>
+
 </head>
 <body>
     <div id="fullpage">
