--- a/common/templates/common/before-start/main.html
+++ b/common/templates/common/before-start/main.html
@@ -4,7 +4,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- HTML Meta Tags -->
     <title>{% trans "Bookgo.me - обмінюємось книгами онлайн" %}</title>
+    <meta name="description" content="Bookgo.me - онлайн платформа для обміну книгами для всіх хто любить книги">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Bookgo.me - обмінюємось книгами онлайн">
+    <meta itemprop="description" content="Bookgo.me - онлайн платформа для обміну книгами для всіх хто любить книги">
+    <meta itemprop="image" content="{% static "img/landing/header.jpg" %}">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://bookgo.me">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Bookgo.me - обмінюємось книгами онлайн">
+    <meta property="og:description" content="Bookgo.me - онлайн платформа для обміну книгами для всіх хто любить книги">
+    <meta property="og:image" content="{% static "img/landing/header.jpg" %}">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Bookgo.me - обмінюємось книгами онлайн">
+    <meta name="twitter:description" content="Bookgo.me - онлайн платформа для обміну книгами для всіх хто любить книги">
+    <meta name="twitter:image" content="{% static "img/landing/header.jpg" %}">
+
+    <!-- Meta Tags Generated via http://heymeta.com -->
     <meta name="viewport" content="width=device-width" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116201182-1"></script>
